@@ -187,6 +187,12 @@ search.dir = ${dspace.dir}/search
 # Chinese analyzer
 # search.analyzer = org.apache.lucene.analysis.cn.ChineseAnalyzer
 
+# Boolean search operator to use, current supported values are OR and AND
+# If this config item is missing or commented out, OR is used
+# AND requires all search terms to be present
+# OR requires one or more search terms to be present
+search.operator = OR
+
 
 ###### Statistical Report Configuration Settings ######
 
